[package]
name = "nux"
version = "0.1.0"
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

clap = "2.33.3"

[dependencies]
clap = "2.33.3"
console = "0.15.0"
dialoguer = "0.9.0"
indicatif = "0.16.2"
duct = "0.13.5"
toml = "0.5"
serde_json = "1.0.59"
